@@ -1,3 +1,7 @@
+Thu May  7 10:31:12 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/IRGenerator.java: fix compile error.
+
 Thu May  7 10:01:41 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/IRGenerator.java: emit statement
